# oetwebapp

./: .claudeignore  .dockerignore  .env.docker-local.example  .env.example  .env.production.example  .env.staging.example  .gitattributes  .gitignore  .mcp.json  .prettierrc  .repomixignore  AGENTS.md  BUGLOG.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  CUsersAdministratorDesktopNew  DEPLOY-MANUAL.md  DEPLOYMENT.md  DESIGN.md  Dockerfile  Dockerfile.dev  Dockerfile.prebuilt  FRONTEND_AUDIT_REPORT.md  LICENSE  MIGRATION-STATUS.md  New OET Web App Links localhost.txt  OET_AI_ARCHITECTURE_FINAL.md  OET_AUDIT_FOR_CLAUDE.md  PRD-LISTENING-V2.md  PRD.md  PRODUCT.md  PROGRESS-LISTENING-V2.md  PROGRESS.md  QA_REPORT.md  QUICK-START.md  README.md  SECURITY.md  TESTER_SETUP.md  TEST_PLAN.md  (+89 more)
.audit-tmp/: be_fullpaths.txt  diff.cjs  fe_missing.txt  fe_paths.txt
.codex/: AGENTS.md  config.toml  skills-index.json  skills-validation.json
.design-sync/: NOTES.md  config.json  conventions.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  agent-state.local.md  copilot-instructions.md  dependabot.yml
.maestro/: deeplink.yaml  smoke.yaml
.opencode/: ULTRAWORK.md  activate.cmd  activate.ps1  gsd-file-manifest.json  oc.cmd  oc.ps1  oh-my-openagent.jsonc  oh-my-openagent.jsonc.tmp  oh-my-opencode.jsonc  opencode.json  package.json
.playwright-cli/: page-2026-03-22T22-54-50-291Z.yml
.storybook/: main.ts  preview.ts
.tmp_render/: extract_text.py  render_pdfs.py
OET Web App Login only screens take from here/: AGENTS.md  README.md  next.config.ts  package-lock.json  package.json  tsconfig.json
OET with Dr. Ahmed Hesham ( Medicine Only )/: Scoring System.txt
_audit/: deployment-runbook.md  phase-2-7-build-summary.md  production-content-audit.md
android/: build.gradle  capacitor.settings.gradle  keystore.properties.example
app/: error.tsx  globals.css  layout.tsx  not-found.tsx  page.test.tsx  page.tsx  providers.tsx
backend/: .dockerignore  .editorconfig  Directory.Build.props  Dockerfile  Dockerfile.dev  Dockerfile.test  Dockerfile.test.dockerignore  OetLearner.sln  OetWithDrHesham.sln  README.md  _difftables.ps1  _model_create.sql  _prodcheck.sql  _stamp_history.sql  _verify_schema.sql  package.json
capacitor-web/: index.html
components/: theme-provider.tsx  webcam-check-panel.tsx
contexts/: accessibility-context.tsx  ai-assistant-context.tsx  auth-context.tsx  notification-center-context.tsx
docs/: ADMIN-BILLING-AUDIT-PLAN.md  ADMIN-RUNTIME-SETTINGS.md  AI-ASSISTANT-ADMIN-RUNBOOK.md  AI-ASSISTANT-CHATBOT.md  AI-ASSISTANT-DEVOPS.md  AI-ASSISTANT-PHASE0-RESEARCH.md  AI-ASSISTANT-PLAN.md  AI-ASSISTANT-PROGRESS.md  AI-ASSISTANT-ROLLOUT-PLAN.md  AI-ASSISTANT-THREAT-ACCEPTANCE.md  AI-ASSISTANT-THREAT-MODEL.md  AI-ASSISTANT-UX-SPEC.md  AI-COPILOT-PRD.md  AI-COPILOT-PROGRESS.md  AI-COPILOT-SDK-INTEGRATION.md  AI-COPILOT-TOOLS-PRD.md  AI-USAGE-POLICY.md  BILLING.md  CI-CD.md  CLOSURE-2026-05-12.md  COMPREHENSIVE_SYSTEM_GAP_ANALYSIS.md  CONTENT-UPLOAD-PLAN.md  CONVERSATION.md  CROSS_PLATFORM_GAP_ANALYSIS.md  DEPLOY-RUNBOOK-ROUND14.md  ELEVENLABS-REALTIME-STT-IMPLEMENTATION-PLAN.md  ELEVENLABS-REALTIME-STT-PRD.md  ELEVENLABS-REALTIME-STT-PRODUCTION-PLAN.md  ELEVENLABS-REALTIME-STT-PROGRESS.md  ELEVENLABS-USAGE-MAP.md  ESLINT-SUPPRESSIONS-INVENTORY.md  FRONTEND_FIX_PLAN.md  GRAMMAR-MODULE.md  GRAMMAR-POLICY.md  GRAMMAR.md  HARDENING-vocab-audio-pipeline.md  LISTENING-GRADING-MODEL.md  LISTENING-INGESTION-PRD.md  LISTENING-MODULE-PLAN.md  LISTENING-PRODUCTION-AUDIT-2026-05-24.md  (+67 more)
documentation/: index.html
electron/: main.cjs  menu.cjs  preload.cjs  runtime-config.cjs  updater.cjs
hooks/: use-ai-assistant.test.tsx  use-ai-assistant.ts  use-analytics.ts  use-attempt-annotations.ts  use-debounced-effect.ts  use-debounced-local-storage.ts  use-enabled-modules.ts  use-exam-date-gate.ts  use-feature-flag-map.ts  use-fullscreen-guard.ts  use-listening-annotations.ts  use-media-preferences.ts  use-reading-annotations.ts  use-webcam-preflight.ts  use-writing-draft-recovery.ts  useAutoSavingNotes.ts  useDailyPlan.ts  useListeningProfile.ts  usePracticeSession.ts  usePronunciationRecorder.ts  (+7 more)
src-tauri/: Cargo.toml  Info.plist  build.rs  clippy.toml  desktop-runtime-config.json  entitlements.plist  rustfmt.toml  tauri.conf.json  tauri.dist.conf.json  updater-feed-server.mjs
src-tauri/__tests__/: desktop-bridge-conformance.test.ts
src-tauri/capabilities/: app-remote.json  default.json  dev-localhost.json  remote-localhost.json
src-tauri/icons/: icon.icns
src-tauri/inject/: desktop-bridge.js
src-tauri/permissions/autogenerated/: app_relaunch.toml  get_dropped_file_info.toml  hard_reload.toml  offline_cache_clear.toml  offline_cache_delete.toml  offline_cache_get.toml  offline_cache_list.toml  offline_cache_store.toml  runtime_info.toml  secret_status.toml  set_capture_protection.toml  show_notification.toml  sign_video_challenge.toml  speaking_audio_discard.toml  speaking_audio_get_blob.toml  speaking_audio_start.toml  speaking_audio_stop.toml  updater_check.toml  updater_install.toml
src-tauri/splash/: index.html  splash.js
src-tauri/src/: attestation.rs  commands.rs  lib.rs  main.rs  runtime.rs  sidecar.rs
(+7749 files in other folders)
