[package]
name = "oet-desktop"
version = "0.1.0"
description = "OET Prep desktop shell (Tauri 2)"
edition = "2021"

[lib]
name = "oet_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }
tauri-plugin-deep-link = "2"
tauri-plugin-notification = "2"
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
keyring = { version = "3", features = ["windows-native", "apple-native", "sync-secret-service"] }
base64 = "0.22"
ureq = "2"

[target.'cfg(windows)'.dependencies]
win32job = "2"

[profile.release]
strip = true
lto = true
codegen-units = 1
