[package]
name = "oet-desktop"
# Baseline placeholder — the real shipped version is stamped from the release tag
# (v*.*.*-tauri-desktop) at build time by tauri-desktop-release.yml. Do NOT rely on
# this value for the released version; v0.6.1 is the latest shipped release.
version = "0.5.1"
description = "OET with Dr. Hesham desktop shell (Tauri 2, remote-only thin client)"
edition = "2021"

[lib]
name = "oet_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
# Pinned to exact latest stable (verified June 2026; tauri 2.11.3 requires ^2.6.3).
tauri-build = { version = "=2.6.3", features = [] }

[dependencies]
# Pinned to exact latest stable (verified June 2026 against crates.io).
tauri = { version = "=2.11.3", features = ["tray-icon"] }
tauri-plugin-single-instance = { version = "=2.4.2", features = ["deep-link"] }
tauri-plugin-deep-link = "=2.4.9"
tauri-plugin-notification = "=2.3.3"
tauri-plugin-opener = "=2.5.4"
tauri-plugin-dialog = "=2.7.1"
tauri-plugin-updater = "=2.10.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# OS keyring for the secret-storage commands (Credential Manager / Keychain).
keyring = { version = "=3.6.3", features = ["windows-native", "apple-native", "sync-secret-service"] }
# base64 for the speaking-audio blob commands.
base64 = "=0.22.1"
# HMAC-SHA256 for the video playback attestation command.
hmac = "=0.12.1"
sha2 = "=0.10.9"

# Screen-capture exclusion (set_capture_protection): render the window black in
# screenshots / recorders / screen shares while a video plays.
#   Windows: SetWindowDisplayAffinity(WDA_EXCLUDEFROMCAPTURE) — windows crate,
#            pinned to the same 0.61.3 Tauri 2.11 already resolves (HWND types align).
#   macOS:   NSWindow.sharingType = None — via objc2 0.6.4 (already in the tree).
[target.'cfg(windows)'.dependencies]
windows = { version = "=0.61.3", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "=0.6.4"

# Release profile — optimized for a small, fast-starting thin client.
# strip+lto+codegen-units=1: smaller binary, better cross-crate inlining (slower
# compile). opt-level="s": optimize for size over raw speed (startup is I/O- and
# network-bound, not CPU-bound, so size wins). panic="abort": no unwinding tables
# (smaller binary); the panic hook still runs and logs before the process aborts.
[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "s"
panic = "abort"
